<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="60dp"
        android:text="@string/label_Number1"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/edittxt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="number"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt1" />

    <TextView
        android:id="@+id/txt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/label_Number2"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittxt1" />

    <EditText
        android:id="@+id/edittxt2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="50dp"
        android:ems="10"
        android:inputType="number"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt2" />

    <Button
        android:id="@+id/btn1"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginTop="32dp"
        android:onClick="buttonClick"
        android:text="@string/btn_Plus"
        android:textSize="34sp"
        app:backgroundTint="@color/btnPlus"
        app:layout_constraintEnd_toStartOf="@+id/btn2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittxt2" />

    <Button
        android:id="@+id/btn2"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:onClick="buttonClick"
        android:text="@string/btn_Minus"
        android:textSize="34sp"
        app:backgroundTint="@color/btnMinus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn1"
        app:layout_constraintTop_toTopOf="@+id/btn1" />

    <Button
        android:id="@+id/btn3"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:onClick="buttonClick"
        android:text="@string/btn_Multiply"
        android:textSize="34sp"
        app:backgroundTint="@color/btnMultiply"
        app:layout_constraintEnd_toStartOf="@+id/btn4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn4" />

    <Button
        android:id="@+id/btn4"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_marginTop="28dp"
        android:onClick="buttonClick"
        android:text="@string/btn_Divide"
        android:textSize="34sp"
        app:backgroundTint="@color/btnDivide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn3"
        app:layout_constraintTop_toBottomOf="@+id/btn2" />


</androidx.constraintlayout.widget.ConstraintLayout>